--- a/css/style.css
+++ b/css/style.css
@@ -141,6 +141,10 @@ li a {
     margin: 0.9em auto;
 }
 
+.client-logo-img {
+    display: flex;
+}
+
 .nav-links-close {
     display: none;
 }
@@ -3393,11 +3397,12 @@ span a {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 30px;
-    padding: 30px 0px;
+    padding: 50px 0px;
     width: 100%;
     max-width: 100%;
     overflow: hidden;
     box-shadow: 0px 10px 50px var(--rgba);
+    margin: 50px 0px 0px;
 }
 
 .img-overlay {
@@ -3527,6 +3532,24 @@ span a {
     margin: 100px auto;
 }
 
+.mega-menu:hover .mega-menu-item {
+    color: var(--brown);
+}
+
+.mega-menu-item:after {
+    font-family: FontAwesome;
+    content: "\f077";
+    color: var(--lightDark);
+    font-size: 15px;
+    padding: 0px 0px 0px 10px;
+}
+
+.mega-menu:hover .mega-menu-item:after {
+    transform: rotateX(180deg);
+    display: inline-block;
+    color: var(--brown);
+}
+
 @media screen and (min-width: 320px) and (max-width: 900px) {
     .mega {
         position: unset;
@@ -3536,6 +3559,10 @@ span a {
         position: unset;
     }
 
+    .about-btn {
+        margin: 35px auto 0px !important;
+    }
+
     .container {
         width: 90%;
         margin: 0 auto;
@@ -3543,6 +3570,33 @@ span a {
 
     .img-width-change img {
         width: 100%;
+    }
+
+    .work-details-img img,
+    .video-image video,
+    .content-img img,
+    .banner-image img,
+    .images,
+    .project-img-01 img,
+    .project-img-02 img,
+    .project-img-03 img,
+    .project-img-04 img,
+    .blog-img img,
+    .pagination-img img,
+    .card-img img,
+    .content-img img,
+    .team-image img,
+    .team-image1 img,
+    .team-image2 img,
+    .team-image3 img,
+    .team-mamber {
+        object-fit: cover;
+    }
+
+    .sub-section-img img,
+    .section-img img {
+        border-radius: 12px;
+        object-fit: cover;
     }
 
     .hr_color {
@@ -4257,6 +4311,7 @@ span a {
 
     .main-header img {
         height: 200px;
+        object-fit: cover;
     }
 
     .pagination-btn {
