give max-width in width container

--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,7 @@ body {
     justify-content: space-between;
     width: 1200px;
     position: relative;
+    max-width: 100%;
 }
 
 .nav-links {
@@ -72,6 +73,7 @@ body {
     justify-content: space-between;
     width: 100%;
     padding: 0px;
+    max-width: 100%;
 }
 
 .nav-links li {
@@ -248,6 +250,7 @@ li a {
     z-index: 1;
     margin: 200px 0px 0px 100px;
     width: 420px;
+    max-width: 100%;
 }
 
 .banner-image {
@@ -357,6 +360,7 @@ section {
     letter-spacing: 0.01em;
     color: var(--lightGray);
     width: 300px;
+    max-width: 100%;
 }
 
 .topic-button {
@@ -477,10 +481,12 @@ button {
 
 .about-contect {
     width: 450px;
+    max-width: 100%;
 }
 
 .images {
     width: 700px;
+    max-width: 100%;
     min-height: 653px;
     background: var(--gray);
     border-radius: 0px 326.5px 0px 123px;
@@ -509,6 +515,7 @@ button {
     text-align: center;
     padding: 88px 0px 0px;
     width: 547px;
+    max-width: 100%;
 }
 
 .testimonial-contect {
@@ -633,6 +640,7 @@ button {
     color: var(--lightGray);
     margin: 0px;
     width: 737px;
+    max-width: 100%;
 }
 
 .project-details-homepage {
@@ -816,6 +824,7 @@ button.project-btn {
     letter-spacing: 0.01em;
     margin: 0px;
     width: 810px;
+    max-width: 100%;
 }
 
 .blog-img img {
@@ -961,6 +970,7 @@ button.project-btn {
     letter-spacing: 0.01em;
     color: var(--lightGray);
     width: 393px;
+    max-width: 100%;
 }
 
 .icons {
@@ -1208,6 +1218,7 @@ span.current.prev {
 
 .icon img {
     width: 188.5px;
+    max-width: 100%;
     height: 428px;
 }
 
@@ -1245,6 +1256,7 @@ span.current.prev {
     text-align: center;
     letter-spacing: 0.02em;
     color: var(--thinLight);
+    max-width: 100%;
     margin: 27px 0px 34px;
 }
 
@@ -1261,6 +1273,7 @@ span.current.prev {
     text-align: center;
     letter-spacing: 0.01em;
     color: var(--lightGray);
+    max-width: 100%;
 }
 
 /* seconder-sectio */
@@ -1306,6 +1319,7 @@ span.current.prev {
     height: 433px;
     background: var(--gray);
     border-radius: 30px;
+    max-width: 100%;
 }
 
 .team-text,
@@ -1332,6 +1346,7 @@ span.current.prev {
     text-align: center;
     letter-spacing: 0.01em;
     color: var(--thinLight);
+    max-width: 100%;
 }
 
 .address a {
@@ -1387,10 +1402,12 @@ span.current.prev {
     letter-spacing: 0.02em;
     color: var(--thinLight);
     margin: 0 auto;
+    max-width: 100%;
 }
 
 .massage-section {
     width: 800px;
+    max-width: 100%;
 }
 
 .form {
@@ -1399,6 +1416,7 @@ span.current.prev {
     height: 45px;
     gap: 40px;
     margin-bottom: 55px;
+    max-width: 100%;
 }
 
 /* blog end */
@@ -1525,6 +1543,7 @@ span.current.prev {
     text-align: center;
     letter-spacing: 0.02em;
     width: 360px;
+    max-width: 100%;
 }
 
 .tags,
@@ -1928,6 +1947,7 @@ span.current.prev {
     letter-spacing: 0.01em;
     color: var(--lightGray);
     width: 500px;
+    max-width: 100%;
     display: none;
     margin: 0px auto 30px;
     transition: all .2s ease-in-out;
@@ -2050,6 +2070,7 @@ span.current.prev {
     letter-spacing: 0.01em;
     color: var(--lightGray);
     width: 495px;
+    max-width: 100%;
 }
 
 .big-font {
@@ -2085,6 +2106,7 @@ span.current.prev {
 
 .font-styling {
     margin: 0 auto;
+    max-width: 100%;
     width: 1106px;
 }
 
@@ -2106,6 +2128,7 @@ span.current.prev {
     letter-spacing: 0.01em;
     color: var(--lightGray);
     width: 850px;
+    max-width: 100%;
 }
 
 .licence-heading {
@@ -2393,6 +2416,7 @@ span a {
     align-items: center;
     color: var(--thinLight);
     width: 448px;
+    max-width: 100%;
 }
 
 .arrow-font {
@@ -2404,6 +2428,7 @@ span a {
     display: flex;
     flex-direction: column;
     gap: 40px;
+    max-width: 100%;
 }
 
 .bg-color-brown {
@@ -2627,6 +2652,7 @@ span a {
     padding: 100px 0px;
     gap: 100px;
     width: 967px;
+    max-width: 100%;
     margin: 0 auto;
 }
 
@@ -2638,6 +2664,7 @@ span a {
 
 .work-details-heading {
     width: 569px;
+    max-width: 100%;
     height: 80px;
     font-family: 'DM Serif Display';
     font-style: normal;
@@ -2655,6 +2682,7 @@ span a {
 
 .work-details-text {
     width: 802px;
+    max-width: 100%;
     height: 66px;
     font-family: 'Jost';
     font-style: normal;
@@ -2670,6 +2698,7 @@ span a {
 
 .work-details-img img {
     width: 485.6px;
+    max-width: 100%;
     height: 453px;
     background: var(--gray);
     border-radius: 0px 123px 0px 326.5px;
@@ -2722,6 +2751,7 @@ span a {
     line-height: 44px;
     text-align: center;
     color: var(--thinLight);
+    max-width: 100%;
 }
 
 .bottom-text-contant {
@@ -2737,6 +2767,7 @@ span a {
     letter-spacing: 0.01em;
     color: var(--lightGray);
     margin-top: 9px;
+    max-width: 100%;
 }
 
 /* service end */
@@ -2821,6 +2852,7 @@ span a {
 .name-section {
     width: 378px;
     height: 45px;
+    max-width: 100%;
 }
 
 .form {
@@ -2829,6 +2861,7 @@ span a {
     height: 45px;
     gap: 40px;
     margin-bottom: 55px;
+    max-width: 100%;
 }
 
 .forms {
@@ -3078,6 +3111,7 @@ span a {
     color: var(--lightGray);
     width: 850px;
     padding: 25px 0px 54px;
+    max-width: 100%;
 }
 
 .licence-changelog-text-container {
@@ -3125,6 +3159,7 @@ span a {
     margin: 0 auto;
     height: 75px;
     overflow: hidden;
+    max-width: 100%;
 }
 
 .tab-btn {
@@ -3263,6 +3298,7 @@ span a {
     padding: 14px 22px;
     width: 528px;
     margin: 0px 0px 30px;
+    max-width: 100%;
 }
 
 .acco-items:hover {
@@ -3303,6 +3339,7 @@ span a {
     transition: all .2s ease-in-out;
     margin: 0px 22px;
     width: 427px;
+    max-width: 100%;
 }
 
 .accordion-item2.active-menu .btn-icon-team {
@@ -3346,10 +3383,6 @@ span a {
     margin: 0px auto 100px;
 }
 
-.img-width-change img {
-    width: 1375px;
-}
-
 .presnt {
     font-family: 'Jost';
     font-style: normal;
@@ -3380,6 +3413,7 @@ span a {
 
 .mail-text-heading {
     width: 670px;
+    max-width: 100%;
 }
 
 .mega {
@@ -3401,8 +3435,8 @@ span a {
     width: 100%;
     max-width: 100%;
     overflow: hidden;
-    box-shadow: 0px 10px 50px var(--rgba);
-    margin: 50px 0px 0px;
+    box-shadow: -5px 5px 5px 5px var(--rgba), 5px -5px 5px 5px var(--rgba);
+    /* margin: 50px 0px 0px; */
 }
 
 .img-overlay {
@@ -3526,6 +3560,7 @@ span a {
     color: var(--thinLight);
     padding: 100px 0px 0px;
     width: 547px;
+    max-width: 100%;
 }
 
 .team-page-card {
@@ -4111,6 +4146,10 @@ span a {
         border-radius: 20px;
     }
 
+    .details {
+        padding: 20px;
+    }
+
     .about-project-heading,
     .mamberName,
     .blog-heading {
@@ -4209,7 +4248,6 @@ span a {
 
     .price-container,
     .project-details,
-    .team-cards,
     .mamber-profile,
     .subContent,
     .blog-details,
@@ -4358,6 +4396,11 @@ span a {
         height: 40px;
     }
 
+    .team-cards {
+        display: flex;
+        flex-direction: column;
+    }
+
 }
 
 @media screen and (min-width: 450px) and (max-width: 900px) {
@@ -4369,5 +4412,10 @@ span a {
     .tab-btn {
         padding: 15px;
         font-size: 18px;
+    }
+
+    .team-cards {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
     }
 }
